--- a/install/server/nginx/adminset.conf
+++ b/install/server/nginx/adminset.conf
@@ -1,5 +1,5 @@
 upstream app_server_djangoapp {
-    server localhost:8000 fail_timeout=0;
+    server 127.0.0.1:8000 fail_timeout=0;
 }
 
 server {
